--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,1 +1,23 @@
-<h1>Add</h1>
+<h1>Add course</h1>
+
+<form action="/add" method="POST">
+    <div class="input-field">
+        <input name="title" id="title" type="text" class="validate" required>
+        <label for="title">Course title</label>
+        <span class="helper-text" data-error="Title is required"></span>
+    </div>
+
+    <div class="input-field">
+        <input name="price" id="price" type="text" class="validate" required>
+        <label for="price">Price</label>
+        <span class="helper-text" data-error="Price is required"></span>
+    </div>
+
+    <div class="input-field">
+        <input name="img" id="img" type="tel" class="validate" required>
+        <label for="img">URL icon</label>
+        <span class="helper-text" data-error="Image is required"></span>
+    </div>
+
+    <button class="btn btn-primary">Add</button>
+</form>
