Add card for market

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,6 +5,7 @@
             <li class={{isHome}}><a href="/">Home</a></li>
             <li class={{isCourses}}><a href="/courses">Courses</a></li>
             <li class={{isAdd}}><a href="/add">Add course</a></li>
+            <li class={{isCard}}><a href="/card">Card</a></li>
         </ul>
     </div>
 </nav>
